--- a/builds/index.html
+++ b/builds/index.html
@@ -3,21 +3,23 @@
 	<title>HRZ Builds</title>
 </head>
 <body>
-	<h1>Builds</h1> <a href = "../index.html"> HOME</a>
+	<h1>Builds</h1>
+	 <a href = "../index.html"> HOME</a>
 	<hr>
 	<h2> Latest Builds </h2>
 			<hr>
 			Stable: aksbfjodb 
 			<br>
-			unstable:dahobfohsbd
+			unstable: <a href="desktop/hrz-0.0.1.jar">hrz-0.0.1.jar</a>
 			<hr>
 	<h2> Older builds </h2>
 		<hr>
 		<h3> Stable </h3>
-
 		<hr>
+
 		<h3> Unstable </h3> 
 		<hr>
+		<a href="desktop/hrz-0.0.1.jar">hrz-0.0.1.jar</a>
 
 </body>
 </html>
