updated javadoc and made a new build

--- a/builds/index.html
+++ b/builds/index.html
@@ -10,7 +10,7 @@
 			<hr>
 			Stable: aksbfjodb 
 			<br>
-			unstable: <a href="desktop/hrz-0.0.1.jar">hrz-0.0.1.jar</a>
+			unstable: <a href="desktop/hrz-0.0.2.jar">hrz-0.0.2.jar</a>
 			<hr>
 	<h2> Older builds </h2>
 		<hr>
@@ -19,6 +19,7 @@
 
 		<h3> Unstable </h3> 
 		<hr>
+		<a href="desktop/hrz-0.0.2.jar">hrz-0.0.2.jar</a> <br>
 		<a href="desktop/hrz-0.0.1.jar">hrz-0.0.1.jar</a>
 
 </body>
