added css Fixes #13

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Hyper Realistic Zombies</title>
+<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
 <h1> Hyper Realistic Zombies </h1>
