--- a/builds/index.html
+++ b/builds/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>HRZ Builds</title>
+	<link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 <body>
 	<h1>Builds</h1>
